--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "homepage": "https://github.com/Darksied95/node_restful_api_with_zod#readme",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "tsnd --respawn src/app.ts"
+    "dev": "tsnd --respawn src/app.ts | pino-pretty"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
